--- a/vagrantfile
+++ b/vagrantfile
@@ -39,10 +39,17 @@ Vagrant.configure("2") do |config|
     pip2 install packaging oauth2client redis passlib flask-httpauth
     pip2 install sqlalchemy flask-sqlalchemy psycopg2-binary bleach requests
 
+    apt-get -qqy install postgresql python-psycopg2
+    apt-get -qqy install python-sqlalchemy
+    apt-get -qqy install python-pip
     pip install --upgrade pip
     pip install werkzeug==0.8.3
     pip install flask==0.9
     pip install Flask-Login==0.1.3
+    pip install oauth2client
+    pip install requests
+    pip install httplib2
+    pip install bleach 
 
     vagrantTip="[35m[1mThe shared directory is located at /vegan_shopping_list\\nTo access your shared files: cd /vegan_shopping_list[m"
     echo -e $vagrantTip > /etc/motd
